FIX: display when fragment id points to child of element in class `.collapsable`

--- a/music/index.css
+++ b/music/index.css
@@ -26,6 +26,6 @@ html {
     display: none;
 }
 
-.collapsable:target {
+.collapsable:has(:target) {
     display: block;
 }
